--- a/css/indexStyle.css
+++ b/css/indexStyle.css
@@ -20,6 +20,76 @@
 	border: none;
 }
 
+.topnav {
+	overflow: hidden;
+	background-color: #fff;
+	font-family: Arial, Helvetica, sans-serif;
+	margin: auto;
+}
+
+.topnav a {
+	float: none;
+	color: rgb(21, 21, 21);
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 16px;
+}
+
+.dropdown {
+	float: none;
+	overflow: hidden;
+}
+
+.dropdown .dropbtn {
+	font-size: 16px;
+	border: none;
+	outline: none;
+	color: rgb(21, 21, 21);
+	padding: 14px 16px;
+	background-color: inherit;
+	font-family: inherit;
+}
+
+.topnav a:hover,
+.dropdown:hover .dropbtn {
+	background-color: #a99999;
+}
+
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #fff;
+	min-width: 160px;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+	z-index: 1;
+}
+
+.dropdown-content a {
+	float: none;
+	color: rgb(21, 21, 21);
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+	text-align: left;
+}
+
+
+.dropdown-content a:hover {
+	background-color: #a99999;
+}
+
+.dropdown:hover .dropdown-content {
+	display: block;
+}
+
+.product-card-btn {
+	float: right;
+	color: rgb(21, 21, 21);
+	padding: 14px 16px;
+	size: 16px;
+}
+
 #gifts {
 	margin: var(--padding);
 	width: calc(100% - (2 * var(--padding)));
